--- a/frontend/src/styles/base/_root.scss
+++ b/frontend/src/styles/base/_root.scss
@@ -4,9 +4,9 @@
   --border-radius: 12px;
   --border-radius-2: 16px;
   --max-width: 1300px;
-  --color-primary: #009a96;
-  --color-primary-acc1: #009a952f;
-  --color-primary-acc2: #009a95a6;
+  --color-primary: #038cd2;
+  --color-primary-acc1: #038dd22f;
+  --color-primary-acc2: #038dd2a6;
   // --color-primary: #2563eb;
   //   --color-primary-acc1: #3b82f6;
   //   --color-primary-acc2: #60a5fa;
